--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Shop_Portals
+application.title=Shop_Portal
 application.vendor=Vikash Gupta
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,7 +29,7 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Shop_Portals.jar
+dist.jar=${dist.dir}/Shop_Portal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -68,7 +68,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
-jlink.launcher.name=Shop_Portals
+jlink.launcher.name=Shop_Portal
 main.class=Shop_Portal.Login_page
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
